src/test/ui/consts/const-eval/issue-70723.rs
#![feature(const_loop)]

static _X: () = loop {}; //~ ERROR could not evaluate static initializer

fn main() {}
